2010-05-26  Chris Toshok  <toshok@ximian.com>

	* TypeReference.cs: add support for MoonVideoFormat** and
	MoonAudioFormat**

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* TypeReference.cs: Updated according to new HttpRequest API.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs:
	* FieldInfo.cs: We always store the correct type in our
	  Value*s instead of failing over to Type::MANAGED now.
	  GCHandles can be checked for with the new "GCHandleFlag"
	  flag in the padding field. This should clear up a lot of
	  warnings about incompatible types.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* Generator.cs (GenerateDPs): when generating the unmanaged setter
	methods, don't use "Value::CreateUnrefPtr (value)", as that
	creates a new Value* that we leak.  Instead just use
	"Value (value)".

2010-04-26  Andreia Gaita  <avidigal@novell.com>

	* Generator.cs, TypeReference.cs: Add support for generating scriptable
	  methods returning Moonlight*Type objects that don't derive from
	  EventObject

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: If a DO subclass is declared and the
	  corresponding .cs file does not exist, throw an exception.
	  It took me ages to realise this was the cause of my managed
	  ctors not being generated.

2010-04-13  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: TextDecorationCollection does not need to be
	  in our type system.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: Make System.Enum be the base type of all enums
	  so we can have a typesafe Value::AsEnum () method in native.

2010-03-29  Chris Toshok  <toshok@ximian.com>

	* Generator.cs: include pal/gtk/*.h

	* MemberInfo.cs: IsSrcMember should return true for everything
	under moon/src

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: Update the generator to use proper type
	  information for default values which are enum types. Also